compiler/src/test/resources/amyc/typer/failing/ComparisonError.amy
module ComparisonError
  1 <= true
end ComparisonError
